<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1034A6">

    <TextView
        android:id="@+id/teamText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ghost_team"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ghostTeamView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/ghostTeamView"
        android:layout_width="408dp"
        android:layout_height="189dp"
        android:background="#0F52BA"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/spookRatingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamText"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/ghostTeamLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/spookRatingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spook_rating"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/boxText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghostTeamView" />

    <TextView
        android:id="@+id/spookRatingValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/boxText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/spookRatingText"
        app:layout_constraintTop_toBottomOf="@+id/ghostTeamView" />

    <TextView
        android:id="@+id/boxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ghost_box"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ghostBoxView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghostTeamView"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F52BA"
        android:text="@string/remove"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ghostBoxView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxText" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0F52BA"
        android:enabled="true"
        android:text="@string/add"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/ghostBoxView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxText" />

    <ScrollView
        android:id="@+id/ghostBoxView"
        android:layout_width="411dp"
        android:layout_height="346dp"
        android:background="#0F52BA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spookRatingText"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">


        <LinearLayout
            android:id="@+id/ghostLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>